--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.2",
     "chart.js": "^3.9.1",
     "formik": "^2.2.9",
     "json-server": "^1.0.0-alpha.21",
+    "mdb-react-ui-kit": "^7.2.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-pro-sidebar": "^0.7.1",
